--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <img id="kitty-2id" src="images/kitty-2.png" alt="Kitty 2">
 
-    <div id="basket">
+    <div id="basketid">
       <img src="images/kitty-3.png" alt="kitty 3">
     </div>
 
